--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
 	"subdomain": "atstake",
 	"database": "at-stake", 
 	"admin_nav": { 
-						"HomePage": "HomePage",
+						"Homepage": "Homepage",
 						"Game Config": ["GameConfig", "GameSession"]						
 					}
 }
