Lots of updates and fixes for Android native app wrapper; added build configs and build scripts. Web scripting fixes for use with Android. Setup use of Hockeyapp for mobile test deployments.

--- a/mobile/android/AtStake/app/build.gradle
+++ b/mobile/android/AtStake/app/build.gradle
@@ -15,6 +15,7 @@ android {
         debug {
             buildConfigField "boolean", "REPORT_CRASHES", "true"
             buildConfigField "String", "ENVIRONMENT", '"debug"'
+
         }
         qa {
             buildConfigField "boolean", "REPORT_CRASHES", "true"
@@ -24,6 +25,14 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             buildConfigField "String", "ENVIRONMENT", '"production"'
+        }
+        applicationVariants.all { variant ->
+            variant.outputs.each { output ->
+                def formattedDate = new Date().format('yyyyMMdd_HHmm')
+                println(output.outputFile)
+                def newName = variant.name + "AtStake_v" + defaultConfig.versionName + "_" + formattedDate + ".apk"
+                output.outputFile = new File(output.outputFile.parent, newName)
+            }
         }
     }
 }
