Update of app and game lib init functionality for compatibility with web and learning games SDK improvements.

--- a/config.json
+++ b/config.json
@@ -2,9 +2,9 @@
 	"name": "@Stake",
 	"directory": "at-stake-v3",
 	"subdomain": "atstake",
+	"db_prefix": "atstake",
 	"database": "at-stake", 
 	"admin_nav": { 
-						"Homepage": "Homepage",
 						"Game Config": ["GameConfig", "GameSession"]						
 					}
 }
