Updates to mobile projects, lots of animation fixes for login/lobby and improvements to how GSAP timelines are implemented in general.

--- a/mobile/android/AtStake/app/build.gradle
+++ b/mobile/android/AtStake/app/build.gradle
@@ -16,7 +16,7 @@ android {
         }
     }
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion '25.0.0'
     defaultConfig {
         applicationId "emersonengagementlab.edu.atstake"
         minSdkVersion 15
