--- a/mobile/android/AtStake/app/src/main/AndroidManifest.xml
+++ b/mobile/android/AtStake/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@android:style/Theme.Material.Light.NoActionBar.Fullscreen"
         tools:ignore="NewApi">
-        <activity android:name=".WebActivity" >
+        <activity android:name=".WebActivity" android:theme="@style/SplashTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
