--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,8 +7,9 @@
         {
             "type": "node",
             "request": "attach",
-            "name": "Attach to Process",
-            "port": 5858
+            "runtimeVersion": "8.11.3",
+            "name": "Launch Program",
+            "port": 9229
         }
     ]
 }
