--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
     "app-module-path": "^1.0.6",
     "app-root-path": "^1.0.0",
     "async": "^1.5.2",
+    "bluebird": "^3.5.2",
     "body-parser": "^1.15.0",
     "browserify": "^13.0.1",
     "connect-mongostore": "^0.1.4",
     "console-remote-client": "^0.4.3",
     "express": "4.16.3",
+    "html-entities": "1.2.0",
     "keystone": "4.0.0",
     "learning-games-core": "git://github.com/engagementgamelab/learning-games-core.git#production",
     "mongoose": "^2.2.5",
     "node-sass-middleware": "^0.11.0",
-    "html-entities": "1.2.0",
     "randomize": "0.0.4",
     "randomstring": "^1.1.4",
     "sentencer": "^0.1.5",
