--- a/package.json
+++ b/package.json
@@ -7,24 +7,27 @@
   },
   "main": "app.js",
   "dependencies": {
-    "app-module-path": "^1.0.6",
-    "app-root-path": "^1.0.0",
+    "@engagementlab/el-bootstrapper": "^0.0.6",
     "async": "^1.5.2",
     "bluebird": "^3.5.2",
     "body-parser": "^1.15.0",
     "browserify": "^13.0.1",
     "connect-mongostore": "^0.1.4",
     "console-remote-client": "^0.4.3",
+    "dotenv": "^8.1.0",
+    "el-hbs": "https://github.com/engagementlab/el-hbs.git",
     "express": "4.16.3",
+    "express-handlebars": "^3.1.0",
     "html-entities": "1.2.0",
-    "keystone": "4.0.0",
     "learning-games-core": "git://github.com/engagementgamelab/learning-games-core.git#production",
-    "mongoose": "^2.2.5",
+    "merge": "1.2.1",
+    "mongoose": "^5.6.2",
     "node-sass-middleware": "^0.11.0",
     "randomize": "0.0.4",
     "randomstring": "^1.1.4",
     "sentencer": "^0.1.5",
     "socket.io": "^2.1.1",
-    "socket.io-client": "^2.1.0"
+    "socket.io-client": "^2.1.0",
+    "winston": "^3.2.1"
   }
 }
