--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,10 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [ 
-        {
-            "type": "node",
-            "request": "attach",
-            "runtimeVersion": "8.11.3",
-            "name": "Launch Program",
-            "port": 9229
-        }
-    ]
+    {
+        "type": "node",
+        "request": "attach",
+        "name": "Attach by Process ID",
+        "processId": "${command:PickProcess}"
+    }]
 }
