--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "sentencer": "^0.1.5",
     "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.0",
+    "underscore": "^1.9.1",
     "winston": "^3.2.1"
   }
 }
