--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "main": "app.js",
   "dependencies": {
     "@engagementlab/el-bootstrapper": "^0.0.6",
+    "@keystone-alpha/auth-passport": "^4.1.3",
+    "@keystone-alpha/keystone": "9.1.0",
     "async": "^1.5.2",
     "bluebird": "^3.5.2",
     "body-parser": "^1.15.0",
@@ -30,5 +32,15 @@
     "socket.io-client": "^2.1.0",
     "underscore": "^1.9.1",
     "winston": "^3.2.1"
+  },
+  "devDependencies": {
+    "grunt": "^1.0.4",
+    "grunt-concurrent": "^3.0.0",
+    "grunt-contrib-watch": "1.1.0",
+    "grunt-nodemon": "0.4.2",
+    "grunt-sass": "3.0.2",
+    "load-grunt-configs": "1.0.0",
+    "load-grunt-tasks": "5.1.0",
+    "time-grunt": "2.0.0"
   }
 }
