--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "learning-games-core": "git://github.com/engagementgamelab/learning-games-core.git#production",
     "merge": "1.2.1",
     "mongoose": "^5.6.2",
+    "node-sass": "^4.13.0",
     "node-sass-middleware": "^0.11.0",
     "randomize": "0.0.4",
     "randomstring": "^1.1.4",
