--- a/package.json
+++ b/package.json
@@ -7,23 +7,23 @@
   },
   "main": "app.js",
   "dependencies": {
-    "app-module-path": "^1.0.6",
-    "app-root-path": "^1.0.0",
-    "async": "^1.5.2",
-    "body-parser": "^1.15.0",
-    "browserify": "^13.0.1",
-    "connect-mongostore": "^0.1.4",
-    "console-remote-client": "^0.4.3",
+    "app-module-path": "1.0.6",
+    "app-root-path": "1.0.0",
+    "async": "1.5.2",
+    "body-parser": "1.15.0",
+    "browserify": "13.0.1",
+    "connect-mongostore": "0.1.4",
+    "console-remote-client": "0.4.3",
     "express": "4.13.4",
     "keystone": "0.3.15",
-    "learning-games-core": "git://github.com/engagementgamelab/learning-games-core.git#production",
-    "mongoose": "^4.4.5",
-    "node-sass-middleware": "^0.9.7",
+    "learning-games-core": "https://github.com/engagementgamelab/learning-games-core.git#production",
+    "mongoose": "4.4.5",
+    "node-sass-middleware": "0.9.7",
     "html-entities": "1.2.0",
     "randomize": "0.0.4",
-    "randomstring": "^1.1.4",
-    "sentencer": "^0.1.5",
-    "socket.io": "^1.7.2",
-    "socket.io-client": "^1.4.5"
+    "randomstring": "1.1.4",
+    "sentencer": "0.1.5",
+    "socket.io": "1.7.2",
+    "socket.io-client": "1.4.5"
   }
 }
